--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@ exclude: [Makefile]
 
 menus:
    main:
-      - 'Home': /
+      - 'Home': /aldor
       - 'Using Aldor':
-         - /users
+         - /aldor/users
          - 'Community wiki': https://github.com/pippijn/aldor/wiki
          - 'Aldor User Guide': http://www.aldor.org/docs/aldorug.pdf
       - 'Development':
-         - /devel
-         - 'Try Aldor': /eval
+         - /aldor/devel
+         - 'Try Aldor': /aldor/eval
          - 'Source repository': https://github.com/pippijn/aldor
          - 'Mailing list': https://groups.google.com/forum/#!forum/aldor-devel
